--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -1,12 +1,12 @@
-h1,
-h2,
-h3,
-h4,
-p,
-li {
+* {
+}
+
+body {
   font-family: sans-serif;
   color: #444;
+  border-top: 10px solid #1098ad;
 }
+
 h1,
 h2,
 h3 {
@@ -113,3 +113,30 @@ a:active {
 }
 
 /* LVHA */
+
+/* resolving conflicts */
+
+/* #copyright {
+  color: red;
+}
+
+.copyright {
+  color: blue;
+}
+
+.text {
+  color: yellow;
+}
+
+footer p {
+  color: green;
+} */
+
+/* nav a:link,
+nav p {
+  font-size: 18px;
+} */
+
+nav {
+  font-size: 18px;
+}
