--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -8,6 +8,7 @@ body {
   font-family: sans-serif;
   color: #444;
   border-top: 10px solid #1098ad;
+  position: relative;
 }
 .container {
   width: 800px;
@@ -19,7 +20,7 @@ body {
   padding: 20px 40px;
   margin-bottom: 60px;
 
-  height: 80px;
+  /* height: 80px; */
 }
 
 nav {
@@ -39,6 +40,8 @@ aside {
   padding: 50px 50px;
   width: 500px;
 }
+
+/* smaller elements */
 
 h1,
 h2,
@@ -176,6 +179,54 @@ nav p {
 } */
 
 .post-img {
-  width: 50%;
+  width: 100%;
   height: auto;
+}
+
+nav a:link {
+  /* background-color: orange;
+  margin: 20px;
+  padding: 20px;
+  display: block; */
+  margin-right: 30px;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+nav a:link:last-child {
+  margin-right: 0;
+}
+
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+}
+
+h1::first-letter {
+  font-style: normal;
+  margin-right: 5px;
+}
+
+h3 + p::first-line {
+  /* color: red; */
+}
+
+h2 {
+  position: relative;
+}
+
+h2::after {
+  content: "TOP";
+  background-color: #ffe70e;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 5px 10px;
+  display: inline-block;
+  position: absolute;
+  right: -20px;
+  top: -10px;
 }
