--- a/starter/02-HTML-Fundamentals/style.css
+++ b/starter/02-HTML-Fundamentals/style.css
@@ -1,110 +1,163 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  box-sizing: border-box;
 }
 
 body {
-  border: 5px solid #000;
-  width: 800px;
-  margin: 20px auto;
+  font-family: sans-serif;
+  line-height: 1.4;
 }
 
-.top-site-header {
-  background-color: #f7f7f7;
-  text-align: center;
-  text-transform: uppercase;
-  padding: 10px 0;
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.container {
+  /*   background-color: red; */
+}
+
+.product-img {
+  float: left;
+  margin-right: 40px;
+}
+
+/* PRODUCT */
+.product {
+  border: 4px solid black;
+  width: 825px;
+  margin: 50px auto;
   position: relative;
 }
-.top-site-header::before {
-  content: "SALE";
-  position: absolute;
-  left: -30px;
-  top: -15px;
-  background-color: red;
-  color: white;
-  padding: 5px 10px;
-  letter-spacing: 3px;
-}
-h1 {
-  font-size: large;
-}
 
-.bold-text {
-  font-weight: bold;
-}
-
-button {
-  background-color: #000;
-  color: white;
-  width: 100%;
-  height: 3em;
+.product-title {
+  text-align: center;
+  font-size: 22px;
   text-transform: uppercase;
-  letter-spacing: 10px;
+  background-color: #f7f7f7;
+  padding: 15px;
 }
 
-button:hover {
-  background-color: white;
-  color: black;
-}
-
-a {
-  color: black;
-}
-
-img {
-  margin-bottom: 10px;
-}
-p {
-  margin: 5px 0;
-}
-
-.shipping {
-  margin-bottom: 20px;
-  text-transform: uppercase;
-  font-weight: normal;
-  font-size: 12px;
-}
-/* article {
-  margin-bottom: 20px;
-} */
-
-ul {
-  margin-left: 20px;
-}
-li {
-  margin-bottom: 10px;
-}
-li:first-child {
+/* PRODUCT INFORMATION */
+.product-info {
+  /*  (825 - 8 - 250 - 80) / 2  */
+  width: 243px;
+  float: left;
+  margin-right: 40px;
   margin-top: 20px;
 }
 
-strong {
-  font-weight: 900;
+.price {
+  font-size: 24px;
+  float: left;
 }
 
-.red {
-  background-color: red;
+.shipping {
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #777;
+  margin-bottom: 20px;
+  float: right;
+  margin-top: 8px;
 }
-.green {
-  background-color: green;
+
+.sale {
+  background-color: #ec2f2f;
+  color: #fff;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 2px;
+  padding: 7px 15px;
+  display: inline-block;
+  position: absolute;
+  top: -17px;
+  left: -38px;
+
+  /*   width: 40px;
+  text-align: center; */
 }
-.brown {
-  background-color: brown;
+
+.product-description {
+  clear: both;
+  margin-bottom: 10px;
 }
-.black {
-  background-color: black;
+
+.more-info:link,
+.more-info:visited {
+  color: black;
+  margin-bottom: 30px;
+  display: inline-block;
 }
-.yellow {
-  background-color: yellow;
+
+.more-info:hover,
+.more-info:active {
+  text-decoration: none;
 }
-.blue {
-  background-color: blue;
-}
-div {
-  padding: 10px 20px 10px 0;
+
+.color {
+  background-color: #000;
+  height: 22px;
+  width: 22px;
   display: inline-block;
   margin-right: 10px;
-  margin-left: 0;
+}
+
+.color-blue {
+  background-color: #2f6ee2;
+}
+.color-red {
+  background-color: #ec2f2f;
+}
+.color-yellow {
+  background-color: #f0bf1e;
+}
+.color-green {
+  background-color: #90cc20;
+}
+.color-brown {
+  background-color: #885214;
+}
+
+/* PRODUCT DETAILS */
+.product-details {
+  width: 243px;
+  float: left;
+  margin-top: 20px;
+}
+
+.details-title {
+  text-transform: uppercase;
+  font-size: 16px;
+  margin-bottom: 15px;
+}
+
+.details-list {
+  list-style: square;
+  margin-left: 20px;
+}
+
+.details-list li {
+  margin-bottom: 10px;
+}
+
+/* BUTTON */
+.add-cart {
+  background-color: #000;
+  border: none;
+  color: #fff;
+  font-size: 20px;
+  text-transform: uppercase;
+  cursor: pointer;
+  padding: 15px;
+  width: 100%;
+  border-top: 4px solid black;
+}
+
+.add-cart:hover {
+  color: #000;
+  background-color: #fff;
 }
