--- a/starter/04-CSS-Layouts/style.css
+++ b/starter/04-CSS-Layouts/style.css
@@ -26,7 +26,7 @@ body {
   padding-left: 40px;
   padding-right: 40px; */
   padding: 20px 40px;
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
   /* height: 80px; */
 }
 
@@ -36,7 +36,7 @@ nav {
 }
 
 article {
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 
 .post-header {
@@ -346,7 +346,8 @@ footer {
   font-weight: normal;
   font-style: italic;
 }
-.row {
+
+/* .row {
   display: flex;
   align-items: flex-start;
   gap: 75px;
@@ -357,8 +358,30 @@ article {
   margin-bottom: 0;
 }
 
-aside {
-  /* flex-basis: 300px;
-  flex-shrink: 0; */
+aside {flex-basis: 300px;
+  flex-shrink: 0; 
   flex: 0 0 300px;
+} */
+/* CSS GRID */
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  gap: 60px 75px;
+  align-items: start;
+}
+
+.main-header {
+  grid-column: 1/3;
+}
+
+article {
+}
+
+aside {
+  /* align-self: start; */
+}
+
+footer {
+  grid-column: 1/-1;
 }
