--- a/starter/02-HTML-Fundamentals/style.css
+++ b/starter/02-HTML-Fundamentals/style.css
@@ -15,14 +15,14 @@ body {
   clear: both;
 }
 
-.container {
+/* .container {
   display: flex;
   gap: 40px;
-}
-
+} */
+/* 
 .product-img {
-  /* float: left; */
-}
+  float: left;
+} */
 
 /* PRODUCT */
 .product {
@@ -30,6 +30,9 @@ body {
   width: 825px;
   margin: 50px auto;
   position: relative;
+  display: grid;
+  grid-template-columns: 250px 1fr 1fr;
+  gap: 0 40px;
 }
 
 .product-title {
@@ -38,6 +41,7 @@ body {
   text-transform: uppercase;
   background-color: #f7f7f7;
   padding: 15px;
+  grid-column: 1/-1;
 }
 
 /* PRODUCT INFORMATION */
@@ -154,6 +158,7 @@ body {
   padding: 15px;
   width: 100%;
   border-top: 4px solid black;
+  grid-column: 1/-1;
 }
 
 .add-cart:hover {
