--- a/starter/05-Design/style.css
+++ b/starter/05-Design/style.css
@@ -6,8 +6,10 @@ FONT SIZE SYSTEM (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 */
 
-/* Main Color: #087f5b 
-Gray color: #343a40*/
+/* 
+Main Color: #087f5b 
+Gray color: #343a40
+*/
 
 * {
   margin: 0;
@@ -107,6 +109,10 @@ img {
 
 /* FEATURES */
 .features-icon {
+  stroke: #087f5b;
+  width: 32px;
+  height: 32px;
+  margin-bottom: 16px;
 }
 
 .features-title {
@@ -170,6 +176,9 @@ h3 {
 }
 
 .chair-icon {
+  stroke: #087f5b;
+  width: 24px;
+  height: 24px;
 }
 
 .chair-price {
