--- a/starter/05-Design/style.css
+++ b/starter/05-Design/style.css
@@ -33,7 +33,7 @@ body {
 
 header,
 section {
-  margin-bottom: 48px;
+  margin-bottom: 96px;
 }
 
 h2 {
@@ -54,7 +54,7 @@ h2 {
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
-
+  border-radius: 100px;
   display: inline-block;
   font-weight: 500;
 }
@@ -74,6 +74,10 @@ h2 {
   padding: 16px 32px;
 }
 
+img {
+  border-radius: 12px;
+}
+
 /* ------------------------ */
 /* COMPONENT STYLES */
 /* ------------------------ */
@@ -83,7 +87,7 @@ header {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 80px;
-  margin-top: 48px;
+  margin-top: 64px;
 }
 
 .header-text-box {
@@ -91,7 +95,7 @@ header {
 }
 
 h1 {
-  margin-bottom: 24px;
+  margin-bottom: 32px;
   font-size: 44px;
   line-height: 1.1;
   letter-spacing: -1px;
@@ -112,7 +116,7 @@ img {
   stroke: #087f5b;
   width: 32px;
   height: 32px;
-  margin-bottom: 16px;
+  margin-bottom: 24px;
 }
 
 .features-title {
@@ -130,6 +134,7 @@ img {
   background-color: #087f5b;
   color: #fff;
   padding: 24px;
+  border-radius: 12px;
 }
 
 .testimonial-box {
@@ -147,11 +152,23 @@ img {
   margin-bottom: 24px;
   font-size: 18px;
   line-height: 1.7;
+  color: #e6fcf5;
+}
+.testimonial-author {
+  color: #c3fae8;
 }
 
 /* CHAIRS */
 .chair-box {
-  padding: 24px;
+  padding: 32px;
+}
+.chair {
+  box-shadow: 0 20px 30px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+}
+
+.chair img {
+  border-radius: 12px 12px 0 0;
 }
 
 h3 {
@@ -161,14 +178,14 @@ h3 {
 
 .chair-details {
   list-style: none;
-  margin-bottom: 24px;
+  margin-bottom: 48px;
 }
 
 .chair-details li {
   display: flex;
   align-items: center;
   gap: 12px;
-  margin-bottom: 24px;
+  margin-bottom: 16px;
 }
 
 .chair-details li:last-child {
@@ -185,6 +202,7 @@ h3 {
   display: flex;
   justify-content: space-between;
   font-size: 20px;
+  align-items: center;
 }
 
 footer {
