reset the -- to finish desktop version

--- a/starter/07-Omnifood-Desktop/css/style.css
+++ b/starter/07-Omnifood-Desktop/css/style.css
@@ -1,13 +1,14 @@
-/* 
-******************
-HEADER
-******************
- */
+/**************************/
+/* HEADER */
+/**************************/
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #fdf2e9;
+
+  /* Because we want header to be sticky later */
   height: 9.6rem;
   padding: 0 4.8rem;
 }
@@ -15,16 +16,16 @@ HEADER
 .logo {
   height: 2.2rem;
 }
-/* 
-******************
-NAVIGATION
-******************
- */
+
+/**************************/
+/* NAVIGATION */
+/**************************/
+
 .main-nav-list {
   list-style: none;
   display: flex;
-  gap: 3.2rem;
   align-items: center;
+  gap: 3.2rem;
 }
 
 .main-nav-link:link,
@@ -34,12 +35,12 @@ NAVIGATION
   color: #333;
   font-weight: 500;
   font-size: 1.8rem;
-  transition: all 0.2s;
+  transition: all 0.3s;
 }
 
 .main-nav-link:hover,
 .main-nav-link:active {
-  color: #e67e22;
+  color: #cf711f;
 }
 
 .main-nav-link.nav-cta:link,
@@ -48,7 +49,6 @@ NAVIGATION
   border-radius: 9px;
   color: #fff;
   background-color: #e67e22;
-  transition: all 0.2s;
 }
 
 .main-nav-link.nav-cta:hover,
@@ -56,16 +56,15 @@ NAVIGATION
   background-color: #cf711f;
 }
 
-/* 
-*****************
-HERO SECTION
-*****************
- */
+/**************************/
+/* HERO SECTION */
+/**************************/
 
 .section-hero {
   background-color: #fdf2e9;
   padding: 4.8rem 0 9.6rem 0;
 }
+
 .hero {
   max-width: 130rem;
   margin: 0 auto;
@@ -78,7 +77,7 @@ HERO SECTION
 
 .hero-description {
   font-size: 2rem;
-  line-height: 1.7;
+  line-height: 1.6;
   margin-bottom: 4.8rem;
 }
 
@@ -89,8 +88,8 @@ HERO SECTION
 .delivered-meals {
   display: flex;
   align-items: center;
-  margin-top: 8rem;
   gap: 1.6rem;
+  margin-top: 8rem;
 }
 
 .delivered-imgs {
@@ -104,22 +103,25 @@ HERO SECTION
   margin-right: -1.6rem;
   border: 3px solid #fdf2e9;
 }
+
 .delivered-imgs img:last-child {
   margin: 0;
 }
+
 .delivered-text {
   font-size: 1.8rem;
   font-weight: 600;
 }
+
 .delivered-text span {
   color: #cf711f;
+  font-weight: 700;
 }
 
-/* 
-*****************
-FEATURED-IN SECTION
-*****************
- */
+/**************************/
+/* FEATURED IN SECTION */
+/**************************/
+
 .section-featured {
   padding: 4.8rem 0 3.2rem 0;
 }
@@ -141,36 +143,38 @@ FEATURED-IN SECTION
 
 .logos img {
   height: 3.2rem;
-  filter: brightness(0%);
+  filter: brightness(0);
   opacity: 50%;
 }
 
-/* 
-*****************
-HOW IT WORKS     SECTION
-*****************
- */
+/**************************/
+/* HOW IT WORKS SECTION */
+/**************************/
 
 .section-how {
   padding: 9.6rem 0;
-  /* background-color: #fdf2e9; */
 }
+
 .step-number {
   font-size: 8.6rem;
   font-weight: 600;
   color: #ddd;
   margin-bottom: 1.2rem;
 }
+
 .step-description {
   font-size: 1.8rem;
   line-height: 1.8;
 }
+
 .step-img-box {
+  position: relative;
+
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
 }
+
 .step-img-box::before,
 .step-img-box::after {
   content: "";
@@ -184,44 +188,47 @@ HOW IT WORKS     SECTION
 
 .step-img-box::before {
   width: 60%;
+  /* height: 60%; */
+
+  /* 60% of parent's width */
   padding-bottom: 60%;
-  content: "";
+
   background-color: #fdf2e9;
   z-index: -2;
-  /* box-shadow: inset 0 0 0 3rem #fae5d3; */
 }
 
 .step-img-box::after {
   width: 45%;
   padding-bottom: 45%;
-  content: "";
   background-color: #fae5d3;
   z-index: -1;
 }
 
 .step-img {
   width: 35%;
+  /* z-index: 10; */
 }
 
-/* 
-*****************
-MEALS SECTION
-*****************
- */
+/**************************/
+/* MEALS SECTION */
+/**************************/
+
 .section-meals {
   padding: 9.6rem 0;
 }
+
 .meal {
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
   border-radius: 11px;
   overflow: hidden;
-  transition: all 0.3s;
+  transition: all 0.4s;
 }
 
 .meal:hover {
-  transform: translateY(-1rem);
+  transform: translateY(-1.2rem);
   box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
 }
+
 .meal-content {
   padding: 3.2rem 4.8rem 4.8rem 4.8rem;
 }
@@ -248,7 +255,6 @@ MEALS SECTION
 .tag--vegan {
   background-color: #94d82d;
 }
-
 .tag--paleo {
   background-color: #ffd43b;
 }
@@ -259,20 +265,19 @@ MEALS SECTION
   font-weight: 600;
   margin-bottom: 3.2rem;
 }
+
 .meal-attributes {
   list-style: none;
   display: flex;
   flex-direction: column;
-  row-gap: 2rem;
+  gap: 2rem;
 }
+
 .meal-attribute {
   font-size: 1.8rem;
   display: flex;
   align-items: center;
   gap: 1.6rem;
-}
-.meal-img {
-  width: 100%;
 }
 
 .meal-icon {
@@ -281,29 +286,33 @@ MEALS SECTION
   color: #e67e22;
 }
 
+.meal-img {
+  width: 100%;
+}
+
 .all-recipes {
   text-align: center;
   font-size: 1.8rem;
 }
 
-/* 
-*****************
-Testimonial SECTION
-*****************
- */
+/**************************/
+/* TESTIMONIALS SECTION */
+/**************************/
 
 .section-testimonials {
   background-color: #fdf2e9;
   display: grid;
-  grid-template-columns: 60fr 40fr;
+  grid-template-columns: 55fr 45fr;
   align-items: center;
 }
+
 .testimonials-container {
   padding: 9.6rem;
 }
+
 .testimonials {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 1fr;
   row-gap: 4.8rem;
   column-gap: 8rem;
 }
@@ -324,16 +333,18 @@ Testimonial SECTION
   font-size: 1.6rem;
   color: #6f6f6f;
 }
-.gallery-item {
-  overflow: hidden;
-}
+
 .gallery {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1.6rem;
   padding: 1.6rem;
-  /* height: fit-content; */
 }
+
+.gallery-item {
+  overflow: hidden;
+}
+
 .gallery-item img {
   display: block;
   width: 100%;
@@ -344,44 +355,48 @@ Testimonial SECTION
   transform: scale(1.1);
 }
 
-/* 
-*****************
-PRICING  SECTION
-*****************
- */
+/**************************/
+/* MEALS SECTION */
+/**************************/
+
 .section-pricing {
   padding: 9.6rem 0;
 }
-.pricing-plan {
+
+.princing-plan {
   border-radius: 11px;
 
   width: 75%;
 }
-.pricing-plan--starter {
+
+.princing-plan--starter {
   justify-self: end;
   border: 2px solid #fdf2e9;
   padding: 4.6rem;
 }
-.pricing-plan--complete {
+
+.princing-plan--complete {
   background-color: #fdf2e9;
   padding: 4.8rem;
   position: relative;
   overflow: hidden;
 }
 
-.pricing-plan--complete::after {
+.princing-plan--complete::after {
   content: "Best value";
   position: absolute;
+  top: 6%;
+  right: -18%;
+
   text-transform: uppercase;
   font-size: 1.4rem;
   font-weight: 700;
-  top: 6%;
-  right: -20%;
+  color: #333;
   background-color: #ffd43b;
   padding: 0.8rem 8rem;
-  color: #333;
   transform: rotate(45deg);
 }
+
 .plan-header {
   text-align: center;
   margin-bottom: 4.8rem;
@@ -415,19 +430,14 @@ PRICING  SECTION
   color: #6f6f6f;
 }
 
-.plan-sign-up {
+.plan-sing-up {
   text-align: center;
   margin-top: 4.8rem;
 }
-/* 
-*****************
-FEATURE  SECTION
-*****************
- */
 
 .plan-details {
   font-size: 1.6rem;
-  line-height: 1.6rem;
+  line-height: 1.6;
   text-align: center;
 }
 
@@ -435,29 +445,34 @@ FEATURE  SECTION
   color: #e67e22;
   height: 3.2rem;
   width: 3.2rem;
-  padding: 1.6rem;
-  margin-bottom: 3.2rem;
   background-color: #fdf2e9;
+  margin-bottom: 3.2rem;
+  padding: 1.6rem;
   border-radius: 50%;
 }
+
 .feature-title {
   font-size: 2.4rem;
   color: #333;
   font-weight: 700;
   margin-bottom: 1.6rem;
 }
+
 .feature-text {
   font-size: 1.8rem;
   line-height: 1.8;
 }
-/* 
-*****************
-CTA  SECTION
-*****************
- */
+
+/**************************/
+/* CTA SECTION */
+/**************************/
 
 .section-cta {
-  padding: 9.6rem 0;
+  /* top / right / bottom / left */
+  /* padding: 9.6rem 0 12.8rem 0; */
+
+  /* top / horizontal / left */
+  padding: 4.8rem 0 12.8rem;
 }
 
 .cta {
@@ -466,20 +481,22 @@ CTA  SECTION
   /* background-color: #e67e22; */
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
   border-radius: 11px;
-  background-image: linear-gradient(135deg, #e67e22, #eb984e);
 
+  background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
   overflow: hidden;
 }
 
 .cta-text-box {
-  color: #45260a;
   padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+  color: #45260a;
 }
 
 .cta .heading-secondary {
+  /* color: #45260a; */
   color: inherit;
   margin-bottom: 3.2rem;
 }
+
 .cta-text {
   font-size: 1.8rem;
   line-height: 1.8;
@@ -488,9 +505,9 @@ CTA  SECTION
 
 .cta-img-box {
   background-image: linear-gradient(
-      135deg,
-      rgba(230, 125, 34, 0.35),
-      rgba(235, 151, 78, 0.35)
+      to right bottom,
+      rgba(235, 151, 78, 0.35),
+      rgba(230, 125, 34, 0.35)
     ),
     url("../img/eating.jpg");
   background-size: cover;
@@ -499,16 +516,18 @@ CTA  SECTION
 
 .cta-form {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 1fr;
   column-gap: 3.2rem;
   row-gap: 2.4rem;
 }
+
 .cta-form label {
   display: block;
   font-size: 1.6rem;
   font-weight: 500;
   margin-bottom: 1.2rem;
 }
+
 .cta-form input,
 .cta-form select {
   width: 100%;
@@ -525,13 +544,85 @@ CTA  SECTION
 .cta-form input::placeholder {
   color: #aaa;
 }
-.cta-form select {
-}
-.cta-form button {
-}
 
 .cta *:focus {
   outline: none;
-
   box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
+}
+
+/**************************/
+/* FOOTER */
+/**************************/
+
+.footer {
+  padding: 12.8rem 0;
+  border-top: 1px solid #eee;
+}
+
+.grid--footer {
+  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+}
+
+.logo-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-logo {
+  display: block;
+  margin-bottom: 3.2rem;
+}
+
+.social-links {
+  list-style: none;
+  display: flex;
+  gap: 2.4rem;
+}
+
+.social-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+}
+
+.copyright {
+  font-size: 1.4rem;
+  line-height: 1.6;
+  color: #767676;
+  margin-top: auto;
+}
+
+.footer-heading {
+  font-size: 1.8rem;
+  font-weight: 500;
+  margin-bottom: 4rem;
+}
+
+.contacts {
+  font-style: normal;
+  font-size: 1.6rem;
+  line-height: 1.6;
+}
+
+.address {
+  margin-bottom: 2.4rem;
+}
+
+.footer-nav {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+.footer-link:link,
+.footer-link:visited {
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #767676;
+  transition: all 0.3s;
+}
+
+.footer-link:hover,
+.footer-link:active {
+  color: #555;
 }
